--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
         <div class="texto-contato">
             <ul>
-                <li><a href=""> <i class="fab fa-instagram rotate"></i> Instagram</a></li> 
-                <li><a href=""><i class="fab fa-github rotate"></i>  Github</a> </li>
+                <li><a href="https://www.instagram.com/feribeirods/"> <i class="fab fa-instagram rotate"></i> Instagram</a></li> 
+                <li><a href="https://github.com/feribeirods"><i class="fab fa-github rotate"></i>  Github</a> </li>
                 <li><a href="https://wa.me/5547984633023" target="_blank"><i class="fab fa-whatsapp rotate"></i> Whatsapp</a></li>
-                <li><a href=""><i class="fab fa-linkedin rotate"></i> Linkedin</a></li>
+                <li><a href="https://www.linkedin.com/in/luiz-fernando-ribeiro-dos-santos-24601a1b7/"><i class="fab fa-linkedin rotate"></i> Linkedin</a></li>
             </ul>
         </div>
 
