--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
             </div>   <!--Final da Formação-->
 
             <div><h1>Experiências Profissionais</h1>   <!--Início das Experiências-->
+                
+            <h3>GDPlace - Marketplace Solar</h3>
+            <p>Desenvolvedor Full Stack Jr. 2021 - Atualmente</p>
+                
+            <h3>WTK-Agro/Golabs</h3>
+            <p>Desenvolvedor Front-end Jr. 2021 - 2021/p>
 
             <h3>Liz Serviços Online (leismunicipais.com.br)</h3>
             <p>Auxiliar Administrativo 2017 - 2019</p>
